Replace j9 deprecated newInstance with doc suggested replacement